update location doc api
