# backend/controllers/Location_controller.go
@@ -10,6 +10,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary      Create one Location record
+// @Description  Create one Location record
+// @Tags         Location
+// @Accept       json
+// @Produce      json
+// @Param        request  body      models.Locations  true  "Location Request Body"
+// @Success      200      {object}  dto.GeneralCreateResponseBody
+// @Router      /base/location/create [post]
 func CreateLocation(c *gin.Context) {
 	var location models.Locations
 	if err := c.ShouldBindJSON(&location); err != nil {
@@ -62,6 +70,14 @@ func InactiveLocationByID(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"message": "Role deactivated successfully", "id": id, "data": result})
 }
 
+// @Summary      Update one Location record
+// @Description  Update one Location record
+// @Tags         Location
+// @Accept       json
+// @Produce      json
+// @Param        request  body      models.Locations  true  "Location Request Body for update"
+// @Success      200      {object}  dto.GeneralUpdateInactiveResponseBody
+// @Router      /base/location/update/{id} [post]
 func UpdateLocationById(c *gin.Context) {
 	var location models.Locations
 	if err := c.ShouldBindJSON(&location); err != nil {
@@ -78,6 +94,14 @@ func UpdateLocationById(c *gin.Context) {
 	c.JSON(http.StatusOK, result)
 }
 
+// @Summary      List Locations
+// @Description  List Locations
+// @Tags         Location
+// @Accept       json
+// @Produce      json
+// @Param        request  body      dto.LocationPageDto  true  "List Action Record Request Body"
+// @Success      200      {object}  dto.LocationList
+// @Router       /base/location/list [post]
 func ListLocations(c *gin.Context) {
 	var locationPageDto dto.LocationPageDto
 	if err := c.ShouldBindJSON(&locationPageDto); err != nil {
